# filekeepers-book-scrapper

./: .gitignore  Book-Scraper-API.postman_collection.json  Book-Scraper-Environment.postman_environment.json  README.md  docker-compose.yml  env.example  mongo-init.js  pyproject.toml  tasks.txt
src/api/: __init__.py  app.py  auth.py  schemas.py
src/api/routers/: books.py  changes.py  health.py
src/crawler/: cli.py  crawler.py  schemas.py  storage.py
src/scheduler/: __init__.py  change_detector.py  cli.py  runner.py
src/utils/: config.py
tests/api/: test_books.py  test_changes.py  test_health.py
tests/crawler/: __init__.py  test_crawler.py
tests/scheduler/: test_change_detector.py  test_runner.py
