[project]
name = "book-scraper"
version = "0.1.0"
description = "Async book crawler for books.toscrape.com"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Contributors" }]
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "pymongo>=4.6.0",
  "beautifulsoup4>=4.12.0"
]

[tool.pdm]

[tool.pdm.dev-dependencies]
test = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
  "coverage>=7.6.0",
  "respx>=0.21.1"
]
lint = [
  "ruff>=0.6.0",
  "black>=24.8.0",
  "mypy>=1.10.0"
]

[tool.pdm.scripts]
crawl = { cmd = "python -m src.crawler.cli crawl --resume" }
test = { cmd = "pytest -q --maxfail=1 --disable-warnings --cov=src --cov-report=term-missing" }
lint = { cmd = "ruff check ." }
format = { cmd = "black ." }
typecheck = { cmd = "mypy src" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

